@@ -1,4 +1,5 @@
 Development
+	Rework database code to use GValues instead of sql commands, should avoid localization issues
 	Apply patch from Issue #669 to fix network stream regression
 	Hide some items on the context menu, when not under plugin control
 	Additional changes to Japanese translation
